# smurf

./: README.md  dataloader.py  pyproject.toml  train.py
cache/: natoy.pickle  toy.pickle  vreed.pickle
