[tool.poetry]
name = "SMURF"
version = "0.1.0"
description = "Statistical Modality Uniqueness and Redundancy Factorization"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.11"
python-tools = {git = "https://bitbucket.org/twoertwein/python-tools.git", rev = "af1462472a11b6156d379844fa91e7b22b31f232"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
